fixed navigation flickering
- the navigation flickered sometimes in web mode (due to data-toggle). Solved the problem, that the menu was not hidden in mobile mode differently (with an own event listener)
- added some space between footer and the content

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -97,6 +97,14 @@ body {
 	padding-right: 2px;
 }
 
+.footer {
+	margin-top:20px;
+}
+
+.clear {
+	clear: both;
+}
+
 @media (max-width: 768px) {
 	.footer {
 	  position: fixed;
